--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:80"
+    networks:
+      - stuffs-backend
+
+networks:
+  stuffs-backend:
+    driver: bridge
