--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,24 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
     ports:
       - "8000:80"
+    volumes:
+      - .:/code
+    networks:
+      - stuffs-backend
+  stuffs-mysql:
+    image: mysql:9
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASS}
+    ports:
+      - "8001:3306"
     networks:
       - stuffs-backend
 
